--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/x">free css templates</a></section><section class="header4 cid-rxw6GEOlxG mbr-parallax-background" id="header4-f">
+<section class="engine"><a href="https://mobiri.se/d">website maker</a></section><section class="header4 cid-rxw6GEOlxG mbr-parallax-background" id="header4-f">
 
     
 
@@ -109,7 +109,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="X44BwESF6PIOvwtBaxILh12jvV/xTImXiW3uMDaqSPae2am+EdvRPBN4OecTzqMNcFhuDFjF99LNfKJNbR2yIjfxuvShsPIWanLwFY9+dLo4BylVjVAAMUIFomiCfMM4" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="56BN5pYZnm2zu5if0SHDiKq8dwqyWWANKdz2LVTp0s9urMtdtLq2JwJ0DbhCDUDVdZz6zvw2oENuekFYHBU3od8hakMsgX+lBvtywJg5CyYVB3no7txCEAtbPWFpFT93" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-q">
