--- a/designs.html
+++ b/designs.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">portfolio site templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFIurA0Niq" id="gallery3-r">
+<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFIurA0Niq" id="gallery3-r">
 
     
 
