--- a/designs.html
+++ b/designs.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#header4-f" target="_blank">
+                    <a class="nav-link link text-white display-4" href="index.html#header4-f">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>About Us &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li>
                 <li class="nav-item">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFIurA0Niq" id="gallery3-r">
+<section class="engine"><a href="https://mobiri.se/d">free site maker</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFIurA0Niq" id="gallery3-r">
 
     
 
