--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#header4-f" target="_blank">
+                    <a class="nav-link link text-white display-4" href="index.html#header4-f">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>About Us &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li>
                 <li class="nav-item">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">build your own website for free</a></section><section class="header4 cid-rxw6GEOlxG mbr-parallax-background" id="header4-f">
+<section class="engine"><a href="https://mobiri.se/e">make a website for free</a></section><section class="header4 cid-rxw6GEOlxG mbr-parallax-background" id="header4-f">
 
     
 
@@ -109,7 +109,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BFImM3PIFFWxuzY3ZZ3UMeyTyh8ncitljXCs+83F79wXJktTV2pI0QOnDXkjUS/eeB6VDdgIJ7wFGdxA+3j4uer2Pm5CLrpzlTkPYz8e0GkI0BVU8b1P8pYgVHaR+0Oq" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wlbAxcUbQqWLBhK6gU0Q5axLG4AdFK8X683SK7QhGQFlRbTADB9T1tVeSBTOl04DxKstrgIXpZ616eqMFuKkWtlqiSBV9jXKyE1EnncW5r8qKOG/sSHpQn5rCJm/jTfb" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-q">
